c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/cast_pointer_to_double.c
/* It's illegal to cast a pointer to a double */

int main(void) {
    int *x;
    double d = (double) x;
    return 0;
}